# geo2dcat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PROGRESS.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.md
docs/: mappings.md
examples/: README.md  basic_usage.py  sparql_integration.py
geo2dcat/: __init__.py  cli.py  dcat_builder.py  shacl_generator.py  types.py  utils.py
geo2dcat/extractors/: __init__.py  csv.py  geotiff.py  grib.py  hdf5.py  netcdf.py  shapefile.py
geo2dcat/mappings/: __init__.py  cf_short_aliases.py  cf_standard_names.py  themes.py
geo2dcat/synthetic/: __init__.py  augmentor.py  generator.py  hard_cases.py  templates.py
tests/: conftest.py  test_api.py  test_cli.py  test_csv.py  test_dcat_builder.py  test_geotiff.py  test_grib.py  test_hdf5.py  test_netcdf.py  test_shacl.py  test_shapefile.py  test_synthetic.py
tests/fixtures/: generate.py  sample.csv
